manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-app-ingress
  namespace: frontend
spec:
  ingressClassName: nginx
  rules:
  - host: "example.com"
    http:
      paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: frontend-service
              port:
                number: 80
